--- a/Nginx Notes/Nginx配置示例/Demo1.conf
+++ b/Nginx Notes/Nginx配置示例/Demo1.conf
@@ -34,10 +34,12 @@ http {
         # 安全配置
         add_header          X-Frame-Options DENY;
         add_header          X-Content-Type-Options nosniff;
+        add_header          Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
         # SSL 协议和加密套件配置
-        ssl_protocols       TLSv1.2 TLSv1.3;  # 只包含安全的协议
-        ssl_ciphers         "TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384";  # 更新为最新的加密套件
+        ssl_protocols       TLSv1.2 TLSv1.3;
+        ssl_ciphers         "TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384";
+        ssl_prefer_server_ciphers on;
 
         # 性能优化
         ssl_session_cache   shared:SSL:10m;
@@ -45,9 +47,9 @@ http {
 
         # 反向代理配置
         location / {
-            proxy_pass http://127.0.0.1:2017; 
-            proxy_redirect off;  # 根据实际情况调整
-            client_max_body_size 10m;  # 最大上传限制
+            proxy_pass http://127.0.0.1:2017;  
+            proxy_redirect off;
+            client_max_body_size 10m;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -60,15 +62,8 @@ http {
             root   html;
         }
     }
-	
-	# HTTP 到 HTTPS 重定向
-	server {
-        listen       80;
-        server_name  xui.stu2116hhr.net;
-        return       301 https://$server_name$request_uri;
-    }
 
-    # HTTPS 服务器配置
+    # 另一个HTTPS服务器配置
     server {
         listen       443 ssl;
         keepalive_timeout   70;
@@ -81,10 +76,12 @@ http {
         # 安全配置
         add_header          X-Frame-Options DENY;
         add_header          X-Content-Type-Options nosniff;
+        add_header          Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
         # SSL 协议和加密套件配置
-        ssl_protocols       TLSv1.2 TLSv1.3;  # 只包含安全的协议
-        ssl_ciphers         "TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384";  # 更新为最新的加密套件
+        ssl_protocols       TLSv1.2 TLSv1.3;
+        ssl_ciphers         "TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384";
+        ssl_prefer_server_ciphers on;
 
         # 性能优化
         ssl_session_cache   shared:SSL:10m;
@@ -92,9 +89,9 @@ http {
 
         # 反向代理配置
         location / {
-            proxy_pass http://127.0.0.1:2053; 
-            proxy_redirect off;  # 根据实际情况调整
-            client_max_body_size 10m;  # 最大上传限制
+            proxy_pass http://127.0.0.1:2053;  
+            proxy_redirect off;
+            client_max_body_size 10m;
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
