--- a/Nginx Notes/Nginx配置示例/Demo1.conf
+++ b/Nginx Notes/Nginx配置示例/Demo1.conf
@@ -1,111 +1,115 @@
 user www-data;
-worker_processes auto;  # 根据CPU核心数自动设置
+worker_processes auto; # 根据CPU核心数自动设置
 
 events {
-    worker_connections  4096;  # 根据服务器的内存和网络能力调整
+	worker_connections 4096; # 根据服务器的内存和网络能力调整
 }
 
 http {
-    include       mime.types;
-    default_type  application/octet-stream;
+	include mime.types;
+	default_type application/octet-stream;
 
-    sendfile        on;
-    keepalive_timeout  65;
+	sendfile on;
+	keepalive_timeout 65;
 
-    gzip  on;
+	gzip on;
 
-    # HTTP 到 HTTPS 重定向
-    server {
-        listen       80;
-        server_name  ip.stu2116hhr.net;
-        return       301 https://$server_name$request_uri;
-    }
+	# HTTP 到 HTTPS 重定向
+	server {
+		listen 80;
+		server_name ip.stu2116hhr.net;
+		return 301 https://$server_name$request_uri;
+	}
 
-    # HTTPS 服务器配置
-    server {
-        listen       443 ssl;
-        keepalive_timeout   70;
-        server_name  ip.stu2116hhr.net;
+	# HTTPS 服务器配置
+	server {
+		listen 443 ssl;
+		keepalive_timeout 70;
+		server_name ip.stu2116hhr.net;
 
-        # SSL 证书和密钥配置
-        ssl_certificate      /etc/ssl/certs/ip.stu2116hhr.net/server.crt;
-        ssl_certificate_key  /etc/ssl/certs/ip.stu2116hhr.net/server.key;
+		# SSL 证书和密钥配置
+		ssl_certificate /etc/ssl/certs/ip.stu2116hhr.net/server.crt;
+		ssl_certificate_key /etc/ssl/certs/ip.stu2116hhr.net/server.key;
 
-        # 安全配置
-        add_header          X-Frame-Options DENY;
-        add_header          X-Content-Type-Options nosniff;
-        add_header          Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+		# 安全配置
+		add_header X-Frame-Options DENY;
+		add_header X-Content-Type-Options nosniff;
+		add_header Strict-Transport-Security
+			"max-age=31536000; includeSubDomains"
+			always;
 
-        # SSL 协议和加密套件配置
-        ssl_protocols       TLSv1.2 TLSv1.3;
-        ssl_ciphers         "TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384";
-        ssl_prefer_server_ciphers on;
+		# SSL 协议和加密套件配置
+		ssl_protocols TLSv1.2 TLSv1.3;
+		ssl_ciphers "TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384";
+		ssl_prefer_server_ciphers on;
 
-        # 性能优化
-        ssl_session_cache   shared:SSL:10m;
-        ssl_session_timeout 10m;
+		# 性能优化
+		ssl_session_cache shared:SSL:10m;
+		ssl_session_timeout 10m;
 
-        # 反向代理配置
-        location / {
-            proxy_pass http://127.0.0.1:2017;  
-            proxy_redirect off;
-            client_max_body_size 10m;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
+		# 反向代理配置
+		location / {
+			proxy_pass http://127.0.0.1:2017;
+			proxy_redirect off;
+			client_max_body_size 10m;
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			proxy_set_header X-Forwarded-Proto $scheme;
+		}
 
-        # 错误页面配置
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   html;
-        }
-    }
+		# 错误页面配置
+		error_page 500 502 503 504 /50x.html;
+		location = /50x.html {
+			root html;
+		}
+	}
 
-    # 另一个HTTPS服务器配置
-    server {
-        listen       443 ssl;
-        keepalive_timeout   70;
-        server_name  xui.stu2116hhr.net;
+	# 另一个HTTPS服务器配置
+	server {
+		listen 443 ssl;
+		keepalive_timeout 70;
+		server_name xui.stu2116hhr.net;
 
-        # SSL 证书和密钥配置
-        ssl_certificate      /etc/ssl/certs/xui.stu2116hhr.net/server.crt;
-        ssl_certificate_key  /etc/ssl/certs/xui.stu2116hhr.net/server.key;
+		# SSL 证书和密钥配置
+		ssl_certificate /etc/ssl/certs/xui.stu2116hhr.net/server.crt;
+		ssl_certificate_key /etc/ssl/certs/xui.stu2116hhr.net/server.key;
 
-        # 安全配置
-        add_header          X-Frame-Options DENY;
-        add_header          X-Content-Type-Options nosniff;
-        add_header          Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+		# 安全配置
+		add_header X-Frame-Options DENY;
+		add_header X-Content-Type-Options nosniff;
+		add_header Strict-Transport-Security
+			"max-age=31536000; includeSubDomains"
+			always;
 
-        # SSL 协议和加密套件配置
-        ssl_protocols       TLSv1.2 TLSv1.3;
-        ssl_ciphers         "TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384";
-        ssl_prefer_server_ciphers on;
+		# SSL 协议和加密套件配置
+		ssl_protocols TLSv1.2 TLSv1.3;
+		ssl_ciphers "TLS_AES_128_GCM_SHA256:TLS_AES_256_GCM_SHA384:TLS_CHACHA20_POLY1305_SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384";
+		ssl_prefer_server_ciphers on;
 
-        # 性能优化
-        ssl_session_cache   shared:SSL:10m;
-        ssl_session_timeout 10m;
+		# 性能优化
+		ssl_session_cache shared:SSL:10m;
+		ssl_session_timeout 10m;
 
-        # 反向代理配置
-        location / {
-            proxy_pass http://127.0.0.1:2053;  
-            proxy_redirect off;
-            client_max_body_size 10m;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-        }
+		# 反向代理配置
+		location / {
+			proxy_pass http://127.0.0.1:2053;
+			proxy_redirect off;
+			client_max_body_size 10m;
+			proxy_set_header Host $host;
+			proxy_set_header X-Real-IP $remote_addr;
+			proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+			proxy_set_header X-Forwarded-Proto $scheme;
+		}
 
-        # 错误页面配置
-        error_page   500 502 503 504  /50x.html;
-        location = /50x.html {
-            root   html;
-        }
-    }
+		# 错误页面配置
+		error_page 500 502 503 504 /50x.html;
+		location = /50x.html {
+			root html;
+		}
+	}
 
-    # 访问日志和错误日志配置
-    access_log  /var/log/nginx/access.log;
-    error_log  /var/log/nginx/error.log;
+	# 访问日志和错误日志配置
+	access_log /var/log/nginx/access.log;
+	error_log /var/log/nginx/error.log;
 }
