--- a/About cybersecurity/WAF/Nginx/dk8s流控面板/nginx.conf
+++ b/About cybersecurity/WAF/Nginx/dk8s流控面板/nginx.conf
@@ -67,6 +67,78 @@ http {
     lua_shared_dict ip_location_stats 30m;
     # 引入lua模块
     lua_package_path "/app/?.lua;;";
+    
+    # 在worker进程启动时执行初始化
+    init_worker_by_lua_block {
+        -- 启动后台IP归属地查询定时器
+        local function start_bg_timer()
+            local dict = ngx.shared.traffic_stats
+            if dict and dict:get("background_timer_started") then
+                return -- 已启动
+            end
+            
+            local has_http, _ = pcall(require, "resty.http")
+            if not has_http then
+                ngx.log(ngx.WARN, "lua-resty-http not available")
+                return
+            end
+            
+            local function fetch_ip_location_background()
+                local location_dict = ngx.shared.ip_location_stats
+                if not dict or not location_dict then return end
+                
+                local keys = dict:get_keys(0)
+                local ips = {}
+                for _, val in pairs(keys) do
+                    if val:match("^last:hour:") then
+                        local ip = val:sub(11)
+                        if not location_dict:get(ip) and ip and ip ~= "" then
+                            table.insert(ips, ip)
+                            if #ips >= 3 then break end
+                        end
+                    end
+                end
+                
+                for _, ip in ipairs(ips) do
+                    local httpc = require("resty.http"):new()
+                    httpc:set_timeout(5000)
+                    local res, err = httpc:request_uri("https://api.vore.top/api/IPdata?ip=" .. ip)
+                    if res and res.status == 200 and res.body then
+                        local json = require("cjson")
+                        local ok, data = pcall(json.decode, res.body)
+                        if ok and data and data.ipdata and data.ipdata.info1 then
+                            local loc = string.format("%s %s %s", 
+                                data.ipdata.info1 or "",
+                                data.ipdata.info2 or "",
+                                data.ipdata.info3 or ""):gsub("%s+", " "):match("^%s*(.-)%s*$")
+                            if loc and loc ~= "" then
+                                location_dict:set(ip, loc)
+                            end
+                        end
+                    end
+                    httpc:close()
+                    ngx.sleep(1)
+                end
+            end
+            
+            local delay = 60
+            local handler
+            handler = function(premature)
+                if not premature then
+                    pcall(fetch_ip_location_background)
+                    ngx.timer.at(delay, handler)
+                end
+            end
+            
+            if ngx.timer.at(delay, handler) then
+                dict:set("background_timer_started", true, 0)
+                ngx.log(ngx.INFO, "Background IP location timer started")
+            end
+        end
+        
+        start_bg_timer()
+    }
+    
     server {
         # 设置dns解析
         resolver 8.8.8.8 ipv6=off;
@@ -156,26 +228,6 @@ http {
 
         # 后段服务为php-fpm。请保留这一段，否则删除
         # location / {
-        #     # 对单个ip进行限速，请根据实际业务进行修改
-        #     limit_req zone=req_ip burst=100 delay=200;
-        #     # 对整个服务进行限速，请根据实际业务进行修改
-        #     limit_req zone=req_svr burst=1000 delay=2000;
-        #     # 向后端传递host名
-        #     proxy_set_header Host $host;
-        #     # 对请求IP进行限速处理
-        #     access_by_lua_file /app/protect.lua;
-        #     # 对请求IP流量进行统计
-        #     log_by_lua_file /app/record.lua;
-        #     # 调试使用
-        #     # lua_code_cache off;
-        #     # access_by_lua_file /app/protect.lua;
-        #     # log_by_lua_file /app/record.lua;
-        #     # 逐个匹配php、html、htm
-        #     index index.php index.html index.htm;
-        # }
-
-        # 后段服务为php-fpm。请保留这一段，否则删除
-        # location ~ \.php$ {
         #     # 对单个ip进行限速，请根据实际业务进行修改
         #     limit_req zone=req_ip burst=100 delay=200;
         #     # 对整个服务进行限速，请根据实际业务进行修改
