--- a/About cybersecurity/WAF/Nginx/dk8s流控面板/nginx.conf
+++ b/About cybersecurity/WAF/Nginx/dk8s流控面板/nginx.conf
@@ -68,77 +68,113 @@ http {
     # 引入lua模块
     lua_package_path "/app/?.lua;;";
     
-    # 在worker进程启动时执行初始化
+    # 初始化工作进程，启动后台定时器
     init_worker_by_lua_block {
-        -- 启动后台IP归属地查询定时器
-        local function start_bg_timer()
-            local dict = ngx.shared.traffic_stats
-            if dict and dict:get("background_timer_started") then
-                return -- 已启动
-            end
-            
-            local has_http, _ = pcall(require, "resty.http")
-            if not has_http then
-                ngx.log(ngx.WARN, "lua-resty-http not available")
+        -- 防止多个worker进程重复启动定时器
+        if ngx.worker.id() ~= 0 then
+            return
+        end
+        
+        -- 后台IP归属地获取功能
+        local function fetch_ip_location_background(premature)
+            if premature then
                 return
             end
             
-            local function fetch_ip_location_background()
-                local location_dict = ngx.shared.ip_location_stats
-                if not dict or not location_dict then return end
-                
-                local keys = dict:get_keys(0)
-                local ips = {}
-                for _, val in pairs(keys) do
-                    if val:match("^last:hour:") then
-                        local ip = val:sub(11)
-                        if not location_dict:get(ip) and ip and ip ~= "" then
-                            table.insert(ips, ip)
-                            if #ips >= 3 then break end
+            local dict = ngx.shared.traffic_stats
+            local location_dict = ngx.shared.ip_location_stats
+            
+            if not dict or not location_dict then
+                ngx.log(ngx.ERR, "Shared dictionaries not available")
+                return
+            end
+            
+            local keys = dict:get_keys(0)
+            local ip_list = {}
+            
+            -- 收集过去1小时内活跃的IP
+            for _, key in ipairs(keys) do
+                if key:find("^last:hour:") then
+                    local ip = key:sub(11) -- 去掉 "last:hour:" 前缀
+                    if ip and ip ~= "" then
+                        -- 检查是否已有归属地信息
+                        local existing_location = location_dict:get(ip)
+                        if not existing_location then
+                            table.insert(ip_list, ip)
                         end
                     end
                 end
+            end
+            
+            -- 限制每次处理的IP数量，避免过度请求
+            local max_ips_per_batch = 5
+            local processed = 0
+            
+            for _, ip in ipairs(ip_list) do
+                if processed >= max_ips_per_batch then
+                    break
+                end
                 
-                for _, ip in ipairs(ips) do
-                    local httpc = require("resty.http"):new()
-                    httpc:set_timeout(5000)
-                    local res, err = httpc:request_uri("https://api.vore.top/api/IPdata?ip=" .. ip)
-                    if res and res.status == 200 and res.body then
-                        local json = require("cjson")
-                        local ok, data = pcall(json.decode, res.body)
-                        if ok and data and data.ipdata and data.ipdata.info1 then
-                            local loc = string.format("%s %s %s", 
-                                data.ipdata.info1 or "",
-                                data.ipdata.info2 or "",
-                                data.ipdata.info3 or ""):gsub("%s+", " "):match("^%s*(.-)%s*$")
-                            if loc and loc ~= "" then
-                                location_dict:set(ip, loc)
-                            end
+                -- 发起HTTP请求获取IP归属地
+                local httpc = require "resty.http"
+                local client = httpc.new()
+                client:set_timeout(5000) -- 5秒超时
+                
+                local res, err = client:request_uri("https://api.vore.top/api/IPdata?ip=" .. ip, {
+                    method = "GET",
+                    headers = {
+                        ["User-Agent"] = "nginx-lua-background"
+                    }
+                })
+                
+                if res and res.status == 200 and res.body then
+                    local cjson = require "cjson"
+                    local ok, data = pcall(cjson.decode, res.body)
+                    
+                    if ok and data and data.ipdata and data.ipdata.info1 then
+                        local location = data.ipdata.info1
+                        if data.ipdata.info2 and data.ipdata.info2 ~= "" then
+                            location = location .. " " .. data.ipdata.info2
                         end
+                        if data.ipdata.info3 and data.ipdata.info3 ~= "" then
+                            location = location .. " " .. data.ipdata.info3
+                        end
+                        
+                        -- 保存到共享字典，永久缓存
+                        location_dict:set(ip, location:gsub("^%s*(.-)%s*$", "%1"))
+                        ngx.log(ngx.INFO, "Background fetched location for IP: " .. ip .. " -> " .. location)
+                    else
+                        -- 查询失败，记录为查询失败
+                        location_dict:set(ip, "查询失败")
                     end
-                    httpc:close()
-                    ngx.sleep(1)
+                else
+                    ngx.log(ngx.WARN, "Failed to fetch location for IP: " .. ip .. ", error: " .. (err or "unknown"))
+                    location_dict:set(ip, "查询失败")
+                end
+                
+                processed = processed + 1
+                
+                -- 每个IP查询之间间隔2秒，避免频繁请求
+                if processed < max_ips_per_batch and processed < #ip_list then
+                    ngx.sleep(2)
                 end
             end
             
-            local delay = 60
-            local handler
-            handler = function(premature)
-                if not premature then
-                    pcall(fetch_ip_location_background)
-                    ngx.timer.at(delay, handler)
-                end
-            end
-            
-            if ngx.timer.at(delay, handler) then
-                dict:set("background_timer_started", true, 0)
-                ngx.log(ngx.INFO, "Background IP location timer started")
+            -- 重新设置定时器，每30秒执行一次
+            local ok, err = ngx.timer.at(30, fetch_ip_location_background)
+            if not ok then
+                ngx.log(ngx.ERR, "Failed to create timer: " .. err)
             end
         end
         
-        start_bg_timer()
+        -- 启动后台定时器
+        local ok, err = ngx.timer.at(10, fetch_ip_location_background) -- 10秒后开始第一次执行
+        if not ok then
+            ngx.log(ngx.ERR, "Failed to create initial timer: " .. err)
+        else
+            ngx.log(ngx.INFO, "Background IP location fetcher started")
+        end
     }
-    
     server {
         # 设置dns解析
         resolver 8.8.8.8 ipv6=off;
@@ -228,6 +264,26 @@ http {
 
         # 后段服务为php-fpm。请保留这一段，否则删除
         # location / {
+        #     # 对单个ip进行限速，请根据实际业务进行修改
+        #     limit_req zone=req_ip burst=100 delay=200;
+        #     # 对整个服务进行限速，请根据实际业务进行修改
+        #     limit_req zone=req_svr burst=1000 delay=2000;
+        #     # 向后端传递host名
+        #     proxy_set_header Host $host;
+        #     # 对请求IP进行限速处理
+        #     access_by_lua_file /app/protect.lua;
+        #     # 对请求IP流量进行统计
+        #     log_by_lua_file /app/record.lua;
+        #     # 调试使用
+        #     # lua_code_cache off;
+        #     # access_by_lua_file /app/protect.lua;
+        #     # log_by_lua_file /app/record.lua;
+        #     # 逐个匹配php、html、htm
+        #     index index.php index.html index.htm;
+        # }
+
+        # 后段服务为php-fpm。请保留这一段，否则删除
+        # location ~ \.php$ {
         #     # 对单个ip进行限速，请根据实际业务进行修改
         #     limit_req zone=req_ip burst=100 delay=200;
         #     # 对整个服务进行限速，请根据实际业务进行修改
